target/release/build/anyhow-d9f4b514f9a3cce7/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/sock/code/wasm-game-of-life/target/release/build/anyhow-d9f4b514f9a3cce7/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
